@@ -22,6 +22,8 @@
 
 QStringList ImgArchiveSink::zip;
 QStringList ImgArchiveSink::rar;
+QStringList ImgArchiveSink::zipi;
+QStringList ImgArchiveSink::rari;
 bool ImgArchiveSink::havezip = false;
 bool ImgArchiveSink::haverar = false;
 
@@ -72,25 +74,42 @@ ImgArchiveSink::ArchiveType ImgArchiveSink::archiveType(const QString &filename)
 int ImgArchiveSink::extract(const QString &filename, const QString &destdir)/*{{{*/
 {
 	ArchiveType archivetype = archiveType(filename);
+	filesnum = 0;
 		
+	pinf = new QProcess(this);
+	pinf->setCommunication(QProcess::Stdout);
+	connect(pinf, SIGNAL(readyReadStdout()), this, SLOT(infoStdoutReady()));
+	connect(pinf, SIGNAL(processExited()), this, SLOT(infoExited()));
 	pext = new QProcess(this);
+	pext->setCommunication(QProcess::Stdout);
+	connect(pext, SIGNAL(readyReadStdout()), this, SLOT(extractStdoutReady()));
 	connect(pext, SIGNAL(processExited()), this, SLOT(extractExited()));
 	
 	if (archivetype == RAR_ARCHIVE)
 	{
 		pext->setArguments(rar);
+		pinf->setArguments(rari);
 	}
 	else if (archivetype == ZIP_ARCHIVE)
 	{
 		pext->setArguments(zip);
+		pinf->setArguments(zipi);
 	}
 	else
 		return SINKERR_UNKNOWNFILE;
 
 	pext->addArgument(filename);
+	pinf->addArgument(filename);
 	pext->setWorkingDirectory(destdir);
-	pext->start();
 
+	//
+	// extract archive file list first. wait until the process is running
+	if (!pinf->start())
+	{
+		delete pinf;
+		delete pext;
+		emit sinkError(SINKERR_OTHER);
+	}
 	return 0;
 }/*}}}*/
 
@@ -108,7 +127,7 @@ int ImgArchiveSink::open(const QString &path)/*{{{*/
 	{
 		if (info.isReadable())
 		{
-			char tmpd[255];
+			char tmpd[19];
 			strcpy(tmpd, "/tmp/qcomic-XXXXXX");
 			mkdtemp(tmpd);
 			int status = extract(path, tmppath = tmpd);
@@ -153,6 +172,13 @@ QString ImgArchiveSink::getFullName()/*{{{*/
 	return archivepath;
 }/*}}}*/
 
+void ImgArchiveSink::infoExited()/*{{{*/
+{
+	extcnt = 0;
+	pinf->deleteLater();
+	pext->start();
+}/*}}}*/
+
 void ImgArchiveSink::extractExited()/*{{{*/
 {
 	pext->deleteLater();
@@ -176,6 +202,28 @@ void ImgArchiveSink::extractExited()/*{{{*/
 		emit sinkReady(archivepath);
 }/*}}}*/
 
+void ImgArchiveSink::infoStdoutReady()/*{{{*/
+{
+	QByteArray b = pinf->readStdout();
+	for (int i=0; i<b.size(); i++)
+		if (b[i] == '\n')
+			filesnum++;
+}/*}}}*/
+
+void ImgArchiveSink::extractStdoutReady()/*{{{*/
+{
+	QByteArray b = pext->readStdout();
+	for (int i=0; i<b.size(); i++)
+		if (b[i] == '\n')
+			emit progress(++extcnt, filesnum);
+	/*if (pext->canReadLineStdout())
+	{
+		QString l = pext->readLineStdout();
+		if (l.find("Extracting") == -1 || l.find("inflating") == -1)
+			emit progress(++extcnt, filesnum);
+	}*/
+}/*}}}*/
+
 bool ImgArchiveSink::autoconfRAR()/*{{{*/
 {
 	rar.clear();
@@ -183,12 +231,16 @@ bool ImgArchiveSink::autoconfRAR()/*{{{*/
 	{
 		rar.append("rar");
 		rar.append("x");
+		rari.append("rar");
+		rari.append("lb");
 		return haverar = true;
 	}
 	if (which("unrar"))
 	{
 		rar.append("unrar");
 		rar.append("x");
+		rari.append("unrar");
+		rari.append("lb");
 		return haverar = true;
 	}
 	return haverar = false;
@@ -200,6 +252,8 @@ bool ImgArchiveSink::autoconfZIP()/*{{{*/
 	if (which("unzip"))
 	{
 		zip.append("unzip");
+		zipi.append("unzip");
+		zipi.append("-l");
 		return havezip = true;
 	}
 	return havezip = false;
